feat: user can click around and save chords

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,9 @@
 $font-size: 1rem;
-$font-family: 'Inter', sans-serif;
-$background-color: #121212;
-$font-color: #dae0e0;
-$page-width: 650px;
+$font-family: 'Futura', sans-serif;
+$background-color: #eee;
+$font-color: #313131;
+$red: #ee4035;
+$blue: #0392cf	;
+$green: #7bc043;
+$yellow: #fdf498;
+$orange: #f37736;
