--- a/src/styles/_scaffolding.scss
+++ b/src/styles/_scaffolding.scss
@@ -9,17 +9,13 @@ html {
 body {
   margin: auto;
   text-align: center;
-  max-width: $page-width;
+  padding: 2rem;
 }
 
 h1 {
-  margin: 0 0 2rem;
+  margin: 0;
 }
 
-.image {
-  display: inline-block;
-  height: 100px;
-  width: 100px;
-  background-image: url('~assets/example.png');
-  background-size: cover;
+figure {
+  margin: 0;
 }
